--- a/README.rdoc
+++ b/README.rdoc
@@ -13,7 +13,8 @@ database.yml file. See below for instructions.
 
 == Installing
 
-As noted above, this plugin requires the "mongo" Ruby Gem.
+As noted above, this plugin requires the "mongo" Ruby Gem, version 0.5.4 or
+higher.
 
 To add this plugin to your Rails app, move (or link) this directory into your
 Rails app's vendor/plugins directory and name it mongo_record. In other words,
